# jot

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  flake.nix  shell.nix
inbox/: Cargo.toml  schema.sql
inbox/src/: auth.rs  database.rs  db.rs  main.rs
inbox/static/: inbox.jsx  pencil.aseprite  style.css
inbox/templates/: base.html.j2  home.html.j2  inbox.html.j2  landing.html.j2  login.html.j2  register.html.j2
lib/: Cargo.toml
lib/src/: lib.rs
scratchpad/: Cargo.toml
scratchpad/src/: main.rs
