[package]
name = "inbox"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
rocket = { version = "0.5.1", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["minijinja"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }

lib = { path = "../lib" }
serde = { version = "1.0.219", features = [ "derive" ] }
argon2 = "0.5.3"
